[gd_scene load_steps=3 format=3 uid="uid://cwb3x28kckta4"]

[ext_resource type="Script" path="res://Clue.gd" id="1_c2a86"]
[ext_resource type="PackedScene" uid="uid://deb61lxcnqa4m" path="res://ItemSelectUI.tscn" id="2_rq3vj"]

[node name="Clue" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c2a86")

[node name="GridContainer" type="GridContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
columns = 3

[node name="ItemSelectUI" parent="." instance=ExtResource("2_rq3vj")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(480, 480)
layout_mode = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="EditingButton" type="CheckButton" parent="CanvasLayer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Editing"

[node name="PrintButton" type="Button" parent="CanvasLayer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Print Clue"

[node name="ClearButton" type="Button" parent="CanvasLayer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Clear
"
